--- a/Peer2code/package.json
+++ b/Peer2code/package.json
@@ -1,24 +1,46 @@
 {
-  "name": "backend",
-  "version": "1.0.0",
-  "description": "Backend for editor",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon index.js",
-    "start": "node index.js"
-  },
-  "author": "",
-  "license": "ISC",
+  "name": "editor",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "@teamwork/websocket-json-stream": "^2.0.0",
-    "body-parser": "^1.19.0",
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.5.0",
+    "@testing-library/user-event": "^7.2.1",
+    "antd": "^4.2.0",
+    "axios": "^0.19.2",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-draggable": "^4.4.3",
+    "react-monaco-editor": "^0.36.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.1",
+    "reconnecting-websocket": "^4.4.0",
     "sharedb": "^1.3.4",
-    "ws": "^7.3.0"
+    "uuid": "^8.1.0"
+  },
+  "scripts": {
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
+    "eject": "react-app-rewired eject"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   },
   "devDependencies": {
-    "nodemon": "^2.0.4"
+    "monaco-editor-webpack-plugin": "^1.9.0",
+    "react-app-rewired": "^2.1.8"
   }
 }
